Fix visible triangle area to match dev-hub

--- a/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
@@ -37,7 +37,7 @@
   height: var(--space-4x);
   /* TODO: change with a var when avaialble in the chainlink repo */
   background-color: #0847f7;
-  top: calc(-1 * var(--space-8x));
+  top: -35px;
   left: 50%;
   transform: translateX(-50%) rotate(45deg);
   opacity: 0;
